# ai-marketing-platform

./: .dockerignore  .env.example  .gitignore  Justfile  README.md  biome.json  docker-compose.dev.yml  docker-compose.yml  flake.nix  infra.nix  openapi.json  openapi.just  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/scraper-api/: Dockerfile  env.example  pyproject.toml
backend/scraper-api-contract/: pyproject.toml
backend/scraper-api-contract/scraper_api_contract/: scraper.py
backend/scraper-api/nix/: python.nix
backend/scraper-api/scraper_api/: dependencies.py  main.py  schema.py  scraper.py  storage.py
backend/scraper-api/scraper_api/routes/: scrape.py
backend/scraper-api/src/: config.py  dependencies.py  logging_config.py  main.py  scraper.py  storage.py
backend/scraper-api/src/routes/: scrape.py
backend/webapp-api/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  cloudbuild-api.yaml  cloudbuild-worker.yaml  env.api.example  env.dev.example  env.worker.example  pyproject.toml
backend/webapp-api-contract/: pyproject.toml
backend/webapp-api-contract/webapp_api_contract/: brand_extraction.py  brand_generation_job.py  brand_settings.py  brands.py  campaign_generation.py  campaigns.py  content.py  content_generation.py  content_plan_items.py  shared.py
backend/webapp-api-contract/webapp_api_contract/brand/: __init__.py  model.py  schema.py
backend/webapp-api-contract/webapp_api_contract/brand_generation_job/: __init__.py  model.py  schema.py
backend/webapp-api-contract/webapp_api_contract/campaign_generation/: __init__.py  model.py  schema.py
backend/webapp-api-contract/webapp_api_contract/campaigns/: __init__.py  model.py  schema.py
backend/webapp-api-contract/webapp_api_contract/content/: __init__.py  model.py  schema.py
backend/webapp-api-contract/webapp_api_contract/content_generation/: __init__.py  model.py  schema.py
backend/webapp-api-contract/webapp_api_contract/content_plan_items/: __init__.py  model.py  schema.py
backend/webapp-api-contract/webapp_api_contract/shared/: __init__.py
backend/webapp-api/aimarketing/: auth.py  config.py  http_logging.py  logging_config.py  utils.py
backend/webapp-api/alembic/: env.py
backend/webapp-api/alembic/versions/: 350195ed1ccc_.py  ac604a79a9d9_add_content_generation_jobs.py  d615596d0a5c_add_cascade_delete_to_brand_foreign_keys.py  eb82e459abec_baseline_from_current_db.py
backend/webapp-api/db/: __init__.py  database.py  dependencies.py  repository_base.py  schema_registry.py  session_factory.py  session_manager.py
backend/webapp-api/db/scripts/: db_generate.py  db_push.py  db_reset.py  format.py
backend/webapp-api/lib/: model.py
backend/webapp-api/lib/ai_agents/: __init__.py
backend/webapp-api/lib/content_generation/: text_with_single_image.py
backend/webapp-api/lib/db/: __init__.py  database.py  dependencies.py  schema_registry.py  session_factory.py  session_manager.py
backend/webapp-api/lib/job/: __init__.py
backend/webapp-api/lib/nano_banana/: __init__.py  dependencies.py  model.py  service.py
backend/webapp-api/lib/prompts/: __init__.py  model.py  service.py
backend/webapp-api/lib/scraper/: __init__.py  dependencies.py  http_client.py  playwright_scraper.py  scraper.py  service.py
backend/webapp-api/lib/supabase_client/: __init__.py  model.py  service.py
backend/webapp-api/migrations/: add_ai_generated_workflow_type.sql  add_brand_ids_to_posts_table.sql  add_content_type_to_content_generation_jobs.sql  add_product_lifestyle_workflow_type.sql  add_workflow_type_to_content_generation_jobs.sql  create_content_generation_jobs_table.sql  initialize_brand_data_defaults.sql  migrate_brands_to_data_column.sql  update_enums_for_ai_image_generation.sql
backend/webapp-api/nix/: python.nix
backend/webapp-api/scripts/: init-local-db.sql  migrate_generate.py  migrate_push.py
backend/webapp-api/services/client_api/: main.py
backend/webapp-api/services/worker_api/: main.py
backend/webapp-api/src/: auth.py  auth_access.py  config.py  docs.py  http_logging.py  logging_config.py  main.py
backend/webapp-api/src/brand/: __init__.py  model.py  repository.py  routes.py  schema.py  service.py
backend/webapp-api/src/brand_archetype/: service.py
backend/webapp-api/src/brand_extraction/: __init__.py  entity.py  errors.py  model.py  repository.py  routes.py  schema.py  service.py
backend/webapp-api/src/brand_generation_job/: __init__.py  entity.py  model.py  repository.py  routes.py  schema.py  service.py
backend/webapp-api/src/brand_settings/: __init__.py
backend/webapp-api/src/brands/: __init__.py  entity.py  model.py  repository.py  routes.py  schema.py  service.py
backend/webapp-api/src/campaign_generation/: __init__.py  entity.py  errors.py  factory.py  model.py  repository.py  routes.py  schema.py  service.py
backend/webapp-api/src/campaigns/: __init__.py  entity.py  model.py  repository.py  routes.py  schema.py  service.py
backend/webapp-api/src/content/: __init__.py  entity.py  model.py  repository.py  routes.py  schema.py  service.py
backend/webapp-api/src/content_channel/: model.py  resources.py  service.py
backend/webapp-api/src/content_generation_job/: __init__.py  entity.py  enum.py  errors.py  factory.py  model.py  repository.py  routes.py  schema.py  service.py
backend/webapp-api/src/content_plan_item/: __init__.py  entity.py  model.py  repository.py  routes.py  schema.py  service.py
backend/webapp-api/src/image_generation/: __init__.py  model.py
backend/webapp-api/src/shared/: __init__.py  text_with_single_image.py
backend/webapp-api/tests/: conftest.py  pytest.ini
backend/webapp-api/tests/blackbox/: __init__.py  auth.py  brands.py  supabase.py
backend/webapp-api/tests/endpoints/: __init__.py  brands.py
backend/webapp-api/tests/integration/: test_brand_endpoints.py
backend/webapp-api/tests/unit/: test_prompt_service_toml.py
backend/webapp-api/vozai/: auth.py  auth_access.py  config.py  logging_config.py  main.py
backend/webapp-api/vozai/routes/: brand_generation.py  brands.py
(+852 files in other folders)
