[project]
name = "scraper-api-contract"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper_api_contract"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["scraper_api_contract"]
lines-after-imports = 2
