[project]
name = "scraper-api-contract"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper_api_contract"]

[dependency-groups]
dev = [
  "ruff>=0.15.10",
  "ty>=0.0.29",
]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["scraper_api_contract"]

[tool.ty.environment]
root = ["."]
