[project]
name = "scraper-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.131.0",
  "uvicorn[standard]>=0.32.0",
  "playwright>=1.56.0",
  "html2text>=2025.4.15",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.6.0",
  "supabase>=2.24.0",
  "httpx>=0.28.1",
  "python-ulid>=3.1.0",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper_api"]

[project.scripts]
serve = "scraper_api.main:main"

[dependency-groups]
dev = [
  "ruff>=0.15.10",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"
extend-exclude = [
  ".eggs",
  ".git",
  ".venv",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "UP",
  "B",
  "SIM",
  "C4",
  "PIE",
  "T20",
  "RET",
  "ARG",
  "PTH",
  "ERA",
  "PL",
  "RUF",
  "TID",
]
extend-select = ["I", "F"]
ignore = ["PLR0913", "PLR2004", "PLR0911", "PLR0912", "PLR0915", "ERA001"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.ruff.lint.isort]
known-first-party = ["scraper_api"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
split-on-trailing-comma = true
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]
