[project]
name = "scraper-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.131.0",
  "uvicorn[standard]>=0.32.0",
  "playwright>=1.56.0",
  "html2text>=2025.4.15",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.6.0",
  "supabase>=2.24.0",
  "httpx>=0.28.1",
  "python-ulid>=3.1.0",
  "python-dotenv>=1.0.1",
  "scraper-api-contract",
  "webapp-api-contract",
]

[tool.uv.sources]
scraper-api-contract = { path = "../scraper-api-contract" }
webapp-api-contract = { path = "../webapp-api-contract" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
serve = "src.main:main"

[dependency-groups]
dev = [
  "ruff>=0.15.10",
  "ty>=0.0.29",
]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["src", "scraper_api_contract", "webapp_api_contract"]

[tool.ty.environment]
root = ["."]
