[project]
name = "webapp-api-contract"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.12.5",
  "pydantic-extra-types>=2.11.0",
  "python-ulid>=3.1.0",
  "scraper-api-contract",
]

[tool.uv.sources]
scraper-api-contract = { path = "../scraper-api-contract" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webapp_api_contract"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["webapp_api_contract"]
lines-after-imports = 2
