[project]
name = "webapp-api-contract"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.12.5",
  "pydantic-extra-types>=2.11.0",
  "python-ulid>=3.1.0",
  "scraper-api-contract",
]

[tool.uv.sources]
scraper-api-contract = { path = "../scraper-api-contract" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webapp_api_contract"]

[dependency-groups]
dev = [
  "ruff>=0.15.10",
  "ty>=0.0.29",
]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["webapp_api_contract"]

[tool.ty.environment]
root = ["."]
