[project]
name = "webapp-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "openai>=2.8.0",
  "google-genai>=1.52.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",
  "html2text>=2025.4.15",
  "pillow>=11.0.0",
  "colorgram-py>=1.2.0",
  "nanoid>=2.0.0",
  "pydantic>=2.12.5",
  "pydantic-ai>=1.80.0",
  "pydantic-extra-types>=2.11.0",
  "public>=2020.12.3",
  "pycountry>=26.2.16",
  "fastapi>=0.131.0",
  "sqlalchemy>=2.0.44",
  "httpx>=0.28.1",
  "tenacity>=8.0.0",
  "jinja2>=3.1.0",
  "playwright>=1.56.0",
  "psycopg2-binary>=2.9.10",
  "asyncpg>=0.31.0",
  "pydantic-settings>=2.6.0",
  "supabase>=2.24.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.20",
  "scalar-fastapi>=1.6.1",
  "fastapi-utils>=0.8.0",
  "python-ulid>=3.1.0",
  "faker>=40.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "lib"]

[project.scripts]
serve-api = "src.main:main"

[dependency-groups]
dev = [
  "ruff>=0.15.10",
  "pytest>=9.0.1",
  "pytest-asyncio>=0.24.0",
  "ty>=0.0.29",
  "httpx>=0.28.1",
  "pytest-docker>=3.2.5",
  "testcontainers[postgres]>=4.0.0",
  "pytest-xdist>=3.8.0",
]


[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["src", "lib", "test"]

[tool.ty.environment]
python = "../.venv/bin/python"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -v -s --tb=short -n auto --dist loadscope"
testpaths = ["tests"]

python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

markers = [
  "slow: marks tests as slow",
  "e2e: End-to-End tests requiring Docker",
  "integration: Integration tests with database using TestContainers",
]

pythonpath = ["."]
